--- a/src/main/resources/templates/reports/overdueopenloans.html
+++ b/src/main/resources/templates/reports/overdueopenloans.html
@@ -9,7 +9,7 @@
 		<div class="col-lg-12">
 
 			<h1 class="page-header">
-				Overdue Items
+				Overdue Open Loans
 				<button type="button" class="btn btn-info" data-bs-toggle="modal"
 					id="helpButton" data-bs-target="#exampleModal">?</button>
 			</h1>
@@ -20,8 +20,8 @@
 			<div class="modal-dialog">
 				<div class="modal-content">
 					<div class="modal-header">
-						<h3 class="modal-title" id="exampleModalLabel">Overdue Items
-							- Help</h3>
+						<h3 class="modal-title" id="exampleModalLabel">Overdue Open
+							Loans - Help</h3>
 					</div>
 					<div class="modal-body">
 
@@ -48,13 +48,13 @@
 					<div class="cols-sm-10">
 						<div class="input-group">
 
-							<select class="form-control" id="institutionDropDown"
-								onchange="callOverdueItemsReportAjaxRequest()">
-								<option th:value="0">Select Institution</option>
+							<select class="form-control" id="servicePointDropDown"
+								onchange="callOverdueOpenLoansReportAjaxRequest()">
+								<option th:value="0">Select Service Point</option>
 
-								<option th:each="institution : ${institutionList}"
-									th:value="${institution.institution_code}"
-									th:text="${institution.institution_name}"></option>
+								<option th:each="servicePoint : ${servicePointList}"
+									th:value="${servicePoint.servicepoint_id}"
+									th:text="${servicePoint.name}"></option>
 							</select>
 						</div>
 					</div>
@@ -71,7 +71,7 @@
 
 	<div class="row">
 		<div class="table-responsive">
-			<table id="overdueItemsDataTable"
+			<table id="overdueOpenLoansDataTable"
 				class="table table-bordered table-hover table-striped">
 				<thead>
 					<tr class="datatable-heading">
@@ -93,7 +93,7 @@
 <div th:replace="common/footer :: footer"></div>
 <div th:replace="common/header :: body-bottom-scripts"></div>
 <script>
-	callOverdueItemsReportAjaxRequest();
+	callOverdueOpenLoansReportAjaxRequest();
 </script>
 </body>
 </html>
