--- a/src/main/resources/templates/reports/circulationlog.html
+++ b/src/main/resources/templates/reports/circulationlog.html
@@ -193,7 +193,30 @@
 
 				</div>
 			</div>
-			<div class="col-xs-3 form-inline"></div>
+			<div class="col-xs-3 form-inline">
+
+				<div class="form-group">
+					<div class="form-group">
+						<label class="cols-sm-2 control-label">With empty dates</label>
+						<div class="cols-sm-10">
+							<div class="input-group">
+
+								<div class="input-group">
+									<input type="checkbox" id="is_with_empty_dates"
+										value="checkboxValue">
+
+								</div>
+
+
+							</div>
+						</div>
+					</div>
+
+				</div>
+
+
+
+			</div>
 			<div class="col-xs-3 form-inline">
 				<div class="form-group">
 					<div class="form-group">
@@ -223,6 +246,9 @@
 				class="table table-bordered table-hover table-striped">
 				<thead>
 					<tr class="datatable-heading">
+						<th></th>
+						<th></th>
+						<th></th>
 						<th></th>
 						<th></th>
 						<th></th>
