--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -111,14 +111,20 @@
 							<ul class="dropdown-menu">
 								<li><a th:href="@{/reports/overduefines}">Overdue Fines</a></li>
 								<li><a th:href="@{/reports/overdueitems}">Overdue Items</a></li>
-								<li><a th:href="@{/reports/overdueopenloans}">Overdue Open Loans</a></li>
-									<li><a th:href="@{/reports/patronblocks}">Patrons Blocks</a></li>
+								<li><a th:href="@{/reports/overdueopenloans}">Overdue
+										Open Loans</a></li>
+								<li><a th:href="@{/reports/patronblocks}">Patrons
+										Blocks</a></li>
 								<li th:if="${user != null  &&  user.authorized.contains(3)}"><a
 									th:href="@{/reports/inventoryloans}">Inventory loans</a></li>
 
 
 								<li><a th:href="@{/reports/circulationlog}">Circulation
 										Log - Closed</a></li>
+								<li><a th:href="@{/reports/institutionalholdings}">Institutional
+										Holdings</a></li>
+
+
 
 							</ul></li>
 
