Circulation report related changes.
 Adding new columns to report, getting open loans from FOLIO to database, Populate open and closed loan in report and relevant UI changes etc.

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -598,3 +598,9 @@ Data Table styling
   border: 1px solid #73AD21;
   padding: 20px;
 }
+
+
+#circulationLogTable th {
+    text-align: center;
+    vertical-align: middle; /* Optional: centers content vertically */
+}
