--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -120,7 +120,7 @@
 
 
 								<li><a th:href="@{/reports/circulationlog}">Circulation
-										Log - Closed</a></li>
+										Log </a></li>
 								<li><a th:href="@{/reports/institutionalholdings}">Institutional
 										Holdings</a></li>
 
