--- a/src/main/resources/templates/reports/circulationlog.html
+++ b/src/main/resources/templates/reports/circulationlog.html
@@ -8,7 +8,7 @@
 
 	<div class="row">
 		<div class="col-lg-12">
-			<h1 class="page-header">Circulation Log - Closed</h1>
+			<h1 class="page-header">Circulation Log</h1>
 		</div>
 
 		<div class="modal fade" id="exampleModal" tabindex="-1"
@@ -197,7 +197,7 @@
 
 				<div class="form-group">
 					<div class="form-group">
-						<label class="cols-sm-2 control-label">With empty dates</label>
+						<label class="cols-sm-2 control-label">Only empty dates</label>
 						<div class="cols-sm-10">
 							<div class="input-group">
 
@@ -217,6 +217,55 @@
 
 
 			</div>
+			<div class="col-xs-3 form-inline">
+
+				<div class="form-group">
+					<div class="form-group">
+						<label class="cols-sm-2 control-label">Open Loans</label>
+						<div class="cols-sm-10">
+							<div class="input-group">
+
+								<div class="input-group">
+									<input type="checkbox" id="is_only_open_loans"
+										value="checkboxValue">
+
+								</div>
+
+
+							</div>
+						</div>
+					</div>
+
+				</div>
+
+			</div>
+
+
+		</div>
+
+		<div class="row">
+
+			<div class="col-xs-3 form-inline">
+				<label class="cols-sm-2 control-label">Material Type</label>
+				<div class="cols-sm-10">
+					<div class="input-group">
+
+						<select class="form-control" id="materialTypeDropDown"
+							th:name="materialTypeDropDown">
+							<option th:value="0">Select Material Type</option>
+
+							<option th:each="material: ${materialTypeList}"
+								th:value="${material.materialType}"
+								th:text="${material.materialType}"></option>
+						</select>
+
+
+
+					</div>
+				</div>
+			</div>
+			<div class="col-xs-3 form-inline"></div>
+			<div class="col-xs-3 form-inline"></div>
 			<div class="col-xs-3 form-inline">
 				<div class="form-group">
 					<div class="form-group">
@@ -255,6 +304,12 @@
 						<th></th>
 						<th></th>
 						<th></th>
+						<th></th>
+						<th style="display:none;"></th>
+						<th style="display:none;"></th>
+						<th style="display:none;"></th>
+						<th style="display:none;"></th>
+						<th style="display:none;"></th>
 					</tr>
 				</thead>
 			</table>
@@ -268,7 +323,10 @@
 <script>
 	$("#load-dt").click(function() {
 
-		if ($('#start_date').val() == '' || $('#end_date').val() == '') {
+		if (institutionDropDown.value == 0 && campusDropDown.value == 0 && libraryDropDown.value == 0 && locationDropDown.value == 0) {
+			alert("Please select a value from at least one dropdown.");   
+	    }
+		else if ($('#start_date').val() == '' || $('#end_date').val() == '') {
 			alert("Select From and To Date")
 		} else {
 			callCirculationLogReportAjaxRequest();
